# newsletter_backend

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: rust.yml
migrations/: 20230704000133_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
