[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Jorge Luis <norestraint@protonmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-http = "3.3.1"
actix-web = "4.3.1"
config = "0.13.3"
serde = { version = "1", features = ["derive"]}

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
actix-rt = "2.8.0"
reqwest = "0.11.18"
tokio = "1.29.1"
